adding a login/log out features. Also changed the time_ago variable to days insteas of minutes

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -3,9 +3,9 @@ header {
     color: #E8FDFF;
     font-family: 'Just Another Hand', cursive;
     font-size: 20px;
-    text-align: center;
+    text-align: left;
     width: 100%;
-    display: block;
+    display: flex;
 }
 
 body{
