--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,7 +1,7 @@
 header {
     background-color: #244751;
     color: #E8FDFF;
-    font-family: 'Just Another Hand', cursive;
+    font-family: 'Lato';
     font-size: 20px;
     text-align: left;
     width: 100%;
@@ -26,7 +26,7 @@ main {
 }
 
 h2:hover{
-    background-color: yellow
+    background-color: grey
 }
 
 .photo:hover{
