--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,6 +4,8 @@
     </div>
 <% end %>
 
+<main role="main">
 <% @posts.each do |post| %>
-    <%= erb(:'shared/post', { locals: {post: post, allow_new_comment: false}}) %>
+    <%= erb(:"shared/post", { locals: {post: post, allow_new_comment: false}}) %>
 <% end %>
+</main>
