changed the css to make the sub

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,7 +11,7 @@
     <body>
         <header> 
             <h1>
-                <a href="/">Finstagram</a>
+                <a class="awesome" href="/">Finstagram</a>
             </h1>
                 <div class="login-info">
                     <% if current_user %>
@@ -21,10 +21,37 @@
                       <a href="/login">Login</a>
                       <a href="/signup">Signup</a>
                     <% end %>
+                
+                    <div class="circle-wrapper">
+                        <div class="bubble"></div>
+                    </div>
                 </div>
         </header>
         <main role="main">
             <%= yield %>
         </main>
+        
+        <footer> 
+        <div class="sea">
+                            <div class="circle-wrapper">
+                                <div class="bubble"></div>
+                                <div class="submarine-wrapper">
+                                <div class="submarine-body">
+                                    <div class="window"></div>
+                                    <div class="engine"></div>
+                                    <div class="light"></div>
+                                </div>
+                                <div class="helix"></div>
+                                <div class="hat">
+                                    <div class="leds-wrapper">
+                                        <div class="periscope">
+                                </div>
+                                        <div class="leds"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
+        </footer>
     </body>
 </html>
